5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1706_3053.log
== TEST (2019-04-29 18:16:59) 
-- CODE:
p= float(input("p:")
if(p>=0 and p<=5000):
	v=(p*0.03+20)
	print(v)
-- ERROR:
File "XXXX", line 2
    if(p>=0 and p<=5000):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:17:45) 
-- CODE:
from math import*
p= float(input("p:")
if(p>=0 and p<=5000):
	v=(p*0.03+20)
	
-- ERROR:
File "XXXX", line 3
    if(p>=0 and p<=5000):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:17:55) 
-- CODE:
from math import*
p= float(input("p:")
if(p>=0 and <=5000):
	v=(p*0.03+20)
	
-- ERROR:
File "XXXX", line 3
    if(p>=0 and <=5000):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:11) 
-- CODE:
p= float(input("p:"))
if(p>= 0 and p< 5000):
	
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:38:37) 
-- CODE:
p= int(input("p:"))
if(p>= 0 and p< 5000):
	
	
-- ERROR:
File "XXXX", line 5
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:39:06) 
-- CODE:
p= int(input("p:"))
if(p>= 0 and p< 5000):
	
	
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:02) 
-- CODE:
p= int(input("p:"))
if(p>= 0 or p< 5000):
	
	
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:17) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	
	
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:40:53) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	v= p*0.03+20
	print(v)
	
	
	
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:44:14) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	v= p*0.03+20
	print(v)
elif(p>= 5000 or p<6000):
	v= p*0.04+25
	print(v)
	
	
	
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:02) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	v= p*0.03+20.00
	print(v)
elif(p>= 5000 or p<6000):
	v= p*0.04+25.00
	print(v)
elif(p>=6000 or p<7000):
	v= p*0.05+30.00
	print(v)
else(p>= 7000):
	v= p*0.06+35.00
	print(v)
	
	
-- EXECUTION TIME:
0.146917
-- ERROR:
  File "/home/codebench/codes/1706/3053/main.py", line 12
    else(p>= 7000):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:47:08) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	v= p*0.03+20.00
	print(v)
elif(p>= 5000 or p<6000):
	v= p*0.04+25.00
	print(v)
elif(p>=6000 or p<7000):
	v= p*0.05+30.00
	print(v)
else(p>= 7000):
	v= p*0.06+35.00
	print(v)
	
	
-- ERROR:
File "XXXX", line 12
    else(p>= 7000):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:47:57) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	v= p*0.03+20.00
	print(v)
elif(p>= 5000 or p<6000):
	v= p*0.04+25.00
	print(v)
elif(p>=6000 or p<7000):
	v= p*0.05+30.00
	print(v)
elif(p>= 7000):
	v= p*0.06+35.00
	print(v)
	
	
-- EXECUTION TIME:
0.182998
-- TEST CASE 1:
---- input:
55
---- correct output:
21.65
---- user output:
21.65
-- TEST CASE 2:
---- input:
96523
---- correct output:
5826.38
---- user output:
2915.69
-- TEST CASE 3:
---- input:
22
---- correct output:
20.66
---- user output:
20.66
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:48:01) 
-- CODE:
from math import*
p= int(input("p:"))
if(p>= 0 or p< 5000):
	v= p*0.03+20.00
	print(v)
elif(p>= 5000 or p<6000):
	v= p*0.04+25.00
	print(v)
elif(p>=6000 or p<7000):
	v= p*0.05+30.00
	print(v)
elif(p>= 7000):
	v= p*0.06+35.00
	print(v)
	
	
-- OUTPUT:
21.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
